--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -1,17 +1,27 @@
-<!-- We include the sidebar as it is shared across two screens. -->
-<ng-include src="'partials/dinner-sidebar.html'" ng-controller="DinnerCtrl"></ng-include>
+<div class="row">
+	<ng-include src="'partials/dinner-sidebar.html'" ng-controller="DinnerCtrl"></ng-include>
 
-<input ng-model="query"/>
-<button ng-click="search(query)">Find</button>
-{{status}}
-<ul>
- <li ng-repeat="dish in dishes">
- <img ng-src="{{dish.ImageURL}}"/>
- {{dish.Title}}
- <a ng-href="#/dish/{{dish.RecipeID}}">View more</a>
- {{dish.Category}} {{dish.Subcategory}}
- </li>
-</ul>
-
-<!-- TODO in Lab 5: Display the input box for search (you can ignore the type dropdown since BigOven does
-not support it in free version) and list all the dishes that match the search. -->
+	<div class="box top-box col-xs-9">
+	  <div class="row subcolor">
+	    <h2>SELECT DISH</h2>
+	    <hr class="divider"/>
+	    <input ng-model="query" type="text"class="form" placeholder="Enter key words"/>
+			<button ng-click="search(query)">Find</button>
+			{{status}}
+	  </div>
+	</div>
+	<div class="box scrollable col-xs-9">
+  	<div ng-repeat="dish in dishes">
+  		<a ng-href="#/dish/{{dish.RecipeID}}">
+	  		<div ng-href="#/dish/{{dish.RecipeID}}"class="dish-container col-xs-3">
+	  			<div class="dish-box">
+	  				<img ng-src="{{dish.ImageURL}}"/>
+	  				<div class="dish-name">
+	  					{{dish.Title}}
+	  				</div>
+	  			</div>
+	  		</div>
+  		</a>
+  	</div>
+	</div>
+</div>
