--- a/app/stylesheets/common.css
+++ b/app/stylesheets/common.css
@@ -1,42 +1,72 @@
-
 /* Containers */
-
-.container {
+body, html {
+  height: 100%;
+}
+.box {
   background-color: white;
   border: 1px solid black;
   border-radius: 3px;
 }
+.sub-content-box {
+  /* sub-content-box = box */
+}
+.spin-container {
+  /* spin-container = box */
+}
+.subcolor {
+  background-color: rgba(247, 225, 134, 0.7);
+}
+.sub-header-container {
+  /* sub-header-container = subcolor */
+}
+.scrollable {
+  height: 70%;
+  overflow: scroll;
+}
+.bottom-box {
+  /* bottom-box = scrollable */
+}
+
+/* HEADER */
 .main-header {
   background-color: rgba(204, 204, 204, 1);
   height: 10%;
   padding-top: 1em;
   border: 3px solid black;
-  margin-left: 1px;
-  margin-right: 1px;
 }
-.sidebar {
-  padding-top: 1em;
-  margin-left: 1px;
-}
-.sub-header-container {
-  background-color: rgba(247, 225, 134, 0.7);
-  border: 1px solid black;
-  border-radius: 3px;
-}
-.spin-container {
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 3px;
-}
-.selectdish-box {
+.padded {
   height: 100%;
   padding: 10px 5px;
 }
-.dish-picker {
-  padding: 0px;
-  margin-right: 0px;
+.selectdish {
+  /* selectdish = padded */
 }
-/*Boxes*/
+
+/* Dish containers */
+.dish-container {
+  width: 25%;
+  margin: 5px;
+  padding: 0px;
+}
+.dish-box img {
+  width: 100%;
+  height: 75%;
+}
+.dish-box {
+  width: 200px;
+  height: 200px;
+  border: 1px solid;
+  padding: 0px;
+}
+.dish-name {
+  border-top: 1px solid;
+  background-color: rgba(247, 225, 134, 0.7);
+  text-align: center;
+  font-size: 1em;
+  height: 50px;
+}
+
+
 .content-box {
   background-color: white;
   height: 85%;
@@ -45,21 +75,15 @@
   margin-right: 1px;
   margin-left: 1px;
 }
-.sub-content-box {
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 3px;
-}
+
 .confirm-n-print-box{
   padding-top: 5px;  
 }
 .top-box {
   height: 30%;
 }
-.bottom-box {
-  height: 70%;
-  overflow: scroll;
-}
+
+
 .info-box {
   background-color: white;
   opacity: 0.8;
@@ -77,29 +101,7 @@
   border: 2px solid black;
   border-radius: 3px;
 }
-.course-container {
-  width: 25%;
-  margin: 5px;
-  padding: 0px;
-}
-.course-box img {
-  width: 100%;
-  height: 75%;
-}
-.course-box {
-  width: 200px;
-  height: 200px;
-  border: 1px solid;
-  padding: 0px;
-}
-.course-name {
-  border-top: 1px solid;
-  background-color: rgba(247, 225, 134, 0.7);
-  text-align: center;
-  font-size: 1em;
-  height: 50px;
-}
-/*confirm dinner page*/
+
 .vertical-line {
   border-left: 2px solid black;
   padding-left: 20px;
@@ -121,9 +123,7 @@
   overflow: scroll;
 }
 /*Fonts*/
-body, html {
-  height: 100%;
-}
+
 body{
   font-family: BalsamiqSansRegular;
 }
