Added flex to CSS and to search.html to display dish containers better

--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -10,7 +10,7 @@
 			{{status}}
 	  </div>
 	</div>
-	<div class="box scrollable col-xs-9">
+	<div class="box scrollable flex col-xs-9">
   	<div ng-repeat="dish in dishes">
   		<a ng-href="#/dish/{{dish.RecipeID}}">
 	  		<div ng-href="#/dish/{{dish.RecipeID}}"class="dish-container col-xs-3">
