--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -1,27 +1,33 @@
 <div class="row">
 	<ng-include src="'partials/dinner-sidebar.html'" ng-controller="DinnerCtrl"></ng-include>
 
-	<div class="box top-box col-xs-9">
-	  <div class="row subcolor">
-	    <h2>SELECT DISH</h2>
-	    <hr class="divider"/>
-	    <input ng-model="query" type="text"class="form" placeholder="Enter key words"/>
-			<button ng-click="search(query)">Find</button>
-			{{status}}
-	  </div>
-	</div>
-	<div class="box scrollable flex col-xs-9">
-  	<div ng-repeat="dish in dishes">
-  		<a ng-href="#/dish/{{dish.RecipeID}}">
-	  		<div ng-href="#/dish/{{dish.RecipeID}}"class="dish-container col-xs-3">
-	  			<div class="dish-box">
-	  				<img ng-src="{{dish.ImageURL}}"/>
-	  				<div class="dish-name">
-	  					{{dish.Title}}
-	  				</div>
-	  			</div>
-	  		</div>
-  		</a>
-  	</div>
+	<div class="box col-xs-9">
+		<div class="top-box row">
+		  <div class="col-xs-12 subcolor">
+		  	<div><h2>SELECT DISH</h2></div>
+		    <div><hr class="divider"/></div>
+		    <div class="row flex">
+		    	<input ng-model="query" type="text"class="form" placeholder="Enter key words"/>
+					<button ng-click="search(query)">Find</button>
+				</div>
+				<div><p>{{status}}</p></div>
+		  </div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 scrollable flex ">
+		  	<div ng-repeat="dish in dishes">
+		  		<a ng-href="#/dish/{{dish.RecipeID}}">
+			  		<div ng-href="#/dish/{{dish.RecipeID}}"class="dish-container col-xs-3">
+			  			<div class="dish-box">
+			  				<img ng-src="{{dish.ImageURL}}"/>
+			  				<div class="dish-name">
+			  					{{dish.Title}}
+			  				</div>
+			  			</div>
+			  		</div>
+		  		</a>
+		  	</div>
+			</div>
+		</div>
 	</div>
 </div>
