Small view change

--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -1,6 +1,7 @@
 <div class="row">
-	<ng-include src="'partials/dinner-sidebar.html'" ng-controller="DinnerCtrl"></ng-include>
-
+	<div class="box col-xs-3">
+		<ng-include src="'partials/dinner-sidebar.html'" ng-controller="DinnerCtrl"></ng-include>
+	</div>
 	<div class="box col-xs-9">
 		<div class="top-box row">
 		  <div class="col-xs-12 subcolor">
