--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -8,7 +8,7 @@
 		  	<div><h2>SELECT DISH</h2></div>
 		    <div><hr class="divider"/></div>
 		    <div class="row flex">
-		    	<input ng-model="query" type="text"class="form" placeholder="Enter key words"/>
+		    	<input ng-model="query" type="text" class="form" placeholder="Enter key words"/>
 					<button ng-click="search(query)">Find</button>
 				</div>
 				<div><p>{{status}}</p></div>
@@ -18,7 +18,7 @@
 			<div class="col-xs-12 scrollable flex ">
 		  	<div ng-repeat="dish in dishes">
 		  		<a ng-href="#/dish/{{dish.RecipeID}}">
-			  		<div ng-href="#/dish/{{dish.RecipeID}}"class="dish-container col-xs-3">
+			  		<div class="dish-container col-xs-3">
 			  			<div class="dish-box">
 			  				<img ng-src="{{dish.ImageURL}}"/>
 			  				<div class="dish-name">
