Fixed error of incorrectly use of ng-repeat

--- a/app/partials/dinner-sidebar.html
+++ b/app/partials/dinner-sidebar.html
@@ -8,7 +8,7 @@
 		<div class="box col-xs-8">Dish</div>
 		<div class="box col-xs-4">Cost</div>
 	</div>
-	<div ng-repeat="for dish in dishes"></div>
+	<div ng-repeat="dish in dishes"></div>
 	<div>
 		<div class="box col-xs-8">Total SEK</div>
 		<div class="box col-xs-4">{{getNumberOfGuests()}}</div>
