--- a/app/stylesheets/common.css
+++ b/app/stylesheets/common.css
@@ -2,6 +2,12 @@ body, html {
   height: 100%;
   max-width: 100%;
   overflow-x: hidden; 
+  background: url(../images/shutterstock_83564761.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: BalsamiqSansRegular;
 }
 
 /* BOXES */
@@ -16,10 +22,24 @@ body, html {
 .spin-container {
   /* spin-container = box */
 }
+.top-box {
+  height: 50%;
+  text-align: center;
+  border-bottom: 1px solid black;
+}
+.info-box {
+  background-color: white;
+  opacity: 0.8;
+  padding-bottom: 2em;
+  margin-top: 6em;
+}
+.bottom-box {
+  /* bottom-box = scrollable */
+}
 
 /* BOX EXTRAS */
 .subcolor {
-  background-color: rgba(247, 225, 134, 0.7);
+  background-color: rgba(247, 225, 134, 1);
 }
 .sub-header-container {
   /* sub-header-container = subcolor */
@@ -31,6 +51,13 @@ body, html {
   height: 70%;
   overflow: scroll;
 }
+.padded {
+  height: 100%;
+  padding: 10px 5px;
+}
+.selectdish {
+  /* selectdish = padded */
+}
 .flex {
   display: flex;
   flex-direction: row;
@@ -38,21 +65,6 @@ body, html {
   justify-content: center;
   align-content: center;
   align-items: stretch;
-}
-.bottom-box {
-  /* bottom-box = scrollable */
-}
-.top-box {
-  height: 50%;
-  text-align: center;
-  border-bottom: 1px solid black;
-}
-.padded {
-  height: 100%;
-  padding: 10px 5px;
-}
-.selectdish {
-  /* selectdish = padded */
 }
 
 /* HEADER */
@@ -87,7 +99,6 @@ body, html {
   font-size: 1em;
   height: 50px;
 }
-
 .content-box {
   background-color: white;
   height: 85%;
@@ -96,27 +107,13 @@ body, html {
   margin-right: 1px;
   margin-left: 1px;
 }
-
 .confirm-n-print-box{
   padding-top: 5px;  
 }
-
-
-
-.info-box {
-  background-color: white;
-  opacity: 0.8;
-  padding-bottom: 2em;
-  margin-top: 6em;
-}
-
-
 .description-box {
   overflow: scroll;
   height: 100%;
 }
-
-
 .vertical-line {
   border-left: 2px solid black;
   padding-left: 20px;
@@ -133,15 +130,11 @@ body, html {
 .button-container {
   text-align: center;
 }
-/* Print page */
 .print-container {
   overflow: scroll;
 }
-/*Fonts*/
 
-body{
-  font-family: BalsamiqSansRegular;
-}
+/* FONTS */
 a {
   color: black;
 }
@@ -173,7 +166,7 @@ a {
     src: url(Fonts/BalsamiqSansBoldItalic.ttf);
 }
 
-/*Dividers*/
+/* DIVIDERS */
 hr.divider {
   border: 0;
   height: 2px;
@@ -183,8 +176,8 @@ hr.divider {
   background-image: -ms-linear-gradient(left, #C9F, #63C, #C9F);
   background-image: -o-linear-gradient(left, #C9F, #63C, #C9F);
 }
-/*Buttons*/
-.start-button {
+/* BUTTONS */
+.start-btn {
   background-color: orange;
   border-radius: 0px;
   border: 2px solid black;
@@ -202,11 +195,4 @@ hr.divider {
   font-size: 1em;
   color: rgba(204, 204, 204, 1);
   box-shadow: 3px 3px 0px rgba(204, 204, 204, 1);
-}
-/*Pictures*/
-.cats {
-  position: absolute;
-  width: 100%;
-  top: 0px;
-  z-index: -1;
 }
