Minimal view change

--- a/app/partials/dinner-sidebar.html
+++ b/app/partials/dinner-sidebar.html
@@ -13,6 +13,8 @@
 		<div class="box col-xs-8">Total SEK</div>
 		<div class="box col-xs-4">{{getNumberOfGuests()}}</div>
 	</div>
-	<a href="#" class="btn confirm-button confirm-dinner">Confirm dinner</a>
+	<div class="center-align">
+		<a href="#" class="btn start-btn">Confirm dinner</a>
+	</div>
 </div>
 <!-- <div id="spin-city"></div> -->
