Fixed the addDishToMenu-function on the dish.html page and in the dinnerservice.js + small other fixes

--- a/app/partials/dish.html
+++ b/app/partials/dish.html
@@ -30,7 +30,7 @@ Instructions, Ingredients and total cost. -->
 		  	</div>
 	  		<div class="row">
 	  			<div class="center-align">
-	  				<a ng-href="#/search" class="btn start-btn ">Confirm dish</a>
+	  				<button class="btn start-btn" ng-click="addDishToMenu()">Add dish to menu</button>
 	  			</div>
 	  		</div>
 		  </div>
