--- a/app/partials/dish.html
+++ b/app/partials/dish.html
@@ -24,9 +24,8 @@ Instructions, Ingredients and total cost. -->
 		  		<div class="col-xs-1">{{ingredient.DisplayQuantity}}</div>
 		  	</div>
 		  	<hr class="divider"/>
-		  	<div class="row">
-		  		<div class="col-xs-11 text-right">Total SEK</div>
-		  		<div class="col-xs-1">{{dish.price}}</div>
+		  	<div class="row text-center">
+		  		Total SEK {{getDishPrice()}}
 		  	</div>
 	  		<div class="row">
 	  			<div class="center-align">
