--- a/app/partials/dinner-sidebar.html
+++ b/app/partials/dinner-sidebar.html
@@ -3,21 +3,23 @@
 	<input class="col-xs-4" type="number" ng-model="numberOfGuests" ng-change="setNumberOfGuest(numberOfGuests)"/>
 	</br>
 	</br>
-<div class="row box subcolor padded">
+<div class="box subcolor padded">
 	<div>
 		<div class="box col-xs-8">Dish</div>
 		<div class="box col-xs-4">Cost</div>
 	</div>
-	<div ng-repeat="dish in getFullMenu()">
-		<div class="col-xs-8">{{dish.Title}}</div>
-		<div class="col-xs-4">{{getDishPrice(dish)}}</div>
+	<div class="" ng-repeat="dish in getFullMenu()">
+		<a ng-href="#/dish/{{dish.RecipeID}}" class="underline">
+			<div class="col-xs-8">{{dish.Title}}</div>
+			<div class="col-xs-4">{{getDishPrice(dish)}}</div>
+		</a>
 	</div>
 	<div>
 		<div class="box col-xs-8">Total SEK</div>
 		<div class="box col-xs-4">{{getTotalMenuPrice()}}</div>
 	</div>
 	<div class="center-align">
-		<a href="#" class="btn start-btn">Confirm dinner</a>
+		<a ng-href="#" class="btn main-btn confirm-btn">Confirm menu</a>
 	</div>
 </div>
 <!-- <div id="spin-city"></div> -->
