--- a/app/partials/dish.html
+++ b/app/partials/dish.html
@@ -28,8 +28,11 @@ Instructions, Ingredients and total cost. -->
 		  		Total SEK {{getDishPrice()}}
 		  	</div>
 	  		<div class="row">
-	  			<div class="center-align">
-	  				<button class="btn start-btn" ng-click="addDishToMenu()">Add dish to menu</button>
+	  			<div class="col-xs-6 center-align">
+	  				<a ng-href="#/search" class="btn main-btn" ng-click="addDishToMenu()">Back to search</a>
+	  			</div>
+	  			<div class="col-xs-6 center-align">
+	  				<a ng-href="#/search" class="btn main-btn confirm-btn" ng-click="addDishToMenu()">Add dish to menu</a>
 	  			</div>
 	  		</div>
 		  </div>
