--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -3,6 +3,6 @@
     <h1>A Home Dinner Service</h1>
     <hr class="divider"/>
     <p>Bacon ipsum dolor amet corned beef doner picanha drumstick pancetta shankle. Strip steak tri-tip pastrami, meatloaf pork chop tail shankle ham. Kevin meatball flank tri-tip shankle. Pork belly corned beef sirloin porchetta, capicola boudin picanha leberkas flank salami tongue ground round. Tongue ribeye pork belly, jowl jerky beef chuck ball ti p porchetta beef ribs venison pancetta cow sirloin tenderloin. Boudin turducken chuck pork belly doner beef swine, kevin pork cow hamburger leberkas pancetta rump ham.</p>
-    <a href="#/search" class="btn start-btn">Create new dinner</a>
+    <a href="#/search" class="btn main-btn">Create new dinner</a>
   </div>
 </div>
