--- a/app/stylesheets/common.css
+++ b/app/stylesheets/common.css
@@ -64,6 +64,9 @@ body, html {
 .button-container {
   /* button-container = center-align */
 }
+.underline {
+  border-bottom: 10px solid black;
+}
 .flex {
   display: flex;
   flex-direction: row;
@@ -183,8 +186,8 @@ hr.divider {
   background-image: -o-linear-gradient(left, #C9F, #63C, #C9F);
 }
 /* BUTTONS */
-.start-btn {
-  background-color: orange;
+.main-btn {
+  background-color: rgba(233, 158, 82, 0.7);
   border-radius: 0px;
   border: 2px solid black;
   font-family: BalsamiqSansBold;
@@ -194,12 +197,9 @@ hr.divider {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.confirm-button {
-  background-color: orange;
-  border-radius: 0px;
-  border: 3px solid rgba(204, 204, 204, 1);
-  font-family: BalsamiqSansBold;
-  font-size: 1em;
-  color: rgba(204, 204, 204, 1);
-  box-shadow: 3px 3px 0px rgba(204, 204, 204, 1);
+.start-btn {
+  /* start-btn = main-btn*/
+}
+.confirm-btn {
+  background-color: rgba(63, 191, 63, 0.7);
 }
