Fixed back-button on dish.html

--- a/app/partials/dish.html
+++ b/app/partials/dish.html
@@ -29,7 +29,7 @@ Instructions, Ingredients and total cost. -->
 		  	</div>
 	  		<div class="row">
 	  			<div class="col-xs-6 center-align">
-	  				<a ng-href="#/search" class="btn main-btn" ng-click="addDishToMenu()">Back to search</a>
+	  				<a ng-href="#/search" class="btn main-btn">Back to search</a>
 	  			</div>
 	  			<div class="col-xs-6 center-align">
 	  				<a ng-href="#/search" class="btn main-btn confirm-btn" ng-click="addDishToMenu()">Add dish to menu</a>
