Small view and bug fixes

--- a/app/partials/dinner-sidebar.html
+++ b/app/partials/dinner-sidebar.html
@@ -19,7 +19,7 @@
 		<div class="box col-xs-4">{{getTotalMenuPrice()}}</div>
 	</div>
 	<div class="center-align">
-		<a ng-href="#" class="btn main-btn confirm-btn">Confirm menu</a>
+		<a ng-href="#/overview" class="btn main-btn confirm-btn">Confirm menu</a>
 	</div>
 </div>
 <!-- <div id="spin-city"></div> -->
