--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,5 +1,5 @@
 <div class="home">
-	<div class="info-box col-xs-9">
+	<div class="info-box semi-opacity col-xs-9">
     <h1>A Home Dinner Service</h1>
     <hr class="divider"/>
     <p>Bacon ipsum dolor amet corned beef doner picanha drumstick pancetta shankle. Strip steak tri-tip pastrami, meatloaf pork chop tail shankle ham. Kevin meatball flank tri-tip shankle. Pork belly corned beef sirloin porchetta, capicola boudin picanha leberkas flank salami tongue ground round. Tongue ribeye pork belly, jowl jerky beef chuck ball ti p porchetta beef ribs venison pancetta cow sirloin tenderloin. Boudin turducken chuck pork belly doner beef swine, kevin pork cow hamburger leberkas pancetta rump ham.</p>
