--- a/app/stylesheets/common.css
+++ b/app/stylesheets/common.css
@@ -29,7 +29,7 @@ body, html {
 }
 .info-box {
   background-color: white;
-  opacity: 0.8;
+  
   padding-bottom: 2em;
   margin-top: 6em;
 }
@@ -50,6 +50,15 @@ body, html {
 .scrollable {
   height: 70%;
   overflow: scroll;
+}
+.top-padding{
+  padding-top: 5px;  
+}
+.semi-opacity {
+  opacity: 0.8;
+}
+.confirm-n-print-box{
+  /* confirm-n-print-box = top-padding */
 }
 .padded {
   height: 100%;
@@ -116,9 +125,7 @@ body, html {
   margin-right: 1px;
   margin-left: 1px;
 }
-.confirm-n-print-box{
-  padding-top: 5px;  
-}
+
 .description-box {
   overflow: scroll;
   height: 100%;
@@ -135,9 +142,6 @@ body, html {
 .course-price {
   color: maroon;
   font-size: 18px;
-}
-.print-container {
-  overflow: scroll;
 }
 
 /* FONTS */
