Added dish category to information on dish.html

--- a/app/partials/dish.html
+++ b/app/partials/dish.html
@@ -7,7 +7,7 @@ Instructions, Ingredients and total cost. -->
 	<div class="box col-xs-9">
 		<div class="row">
 		  <div class="container col-xs-6">
-		  	<h2>{{dish.Title}}</h2>
+		  	<h2>{{dish.Title}} ({{dish.Category}})</h2>
 		  	<img class="dish-box" ng-src="{{dish.ImageURL}}"/>
 		  	<h3>Description</h3>
 		  	<p>{{dish.Description}}</p>
