Small view changes, mostly small underscore lines

--- a/app/partials/preparation.html
+++ b/app/partials/preparation.html
@@ -13,7 +13,7 @@
 	</div>
 </div>
 <div class="box top-padding">
-	<div class="row" ng-repeat="dish in getFullMenu()">
+	<div class="row underline" ng-repeat="dish in getFullMenu()">
 		<div class="col-xs-3 center-align">
 			<h2>{{dish.Title}}</h2>
 			<a ng-href="#/dish/{{dish.RecipeID}}">
