--- a/app/stylesheets/common.css
+++ b/app/stylesheets/common.css
@@ -74,7 +74,7 @@ body, html {
   /* button-container = center-align */
 }
 .underline {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgba(213, 203, 164, 0.9);
   margin: 0px;
 }
 .flex {
@@ -209,4 +209,7 @@ hr.divider {
 }
 .confirm-btn {
   background-color: rgba(63, 191, 63, 0.7);
+}
+.remove-btn {
+  background-color: rgba(191, 63, 63, 0.7);
 }
