--- a/app/partials/preparation.html
+++ b/app/partials/preparation.html
@@ -1,34 +1,49 @@
 <div class="row">
 	<div class="box col-xs-12">
 		<div class="top-box row subcolor">
-		  <div class="">
-		  	<div class="col-xs-2 center-align">
+			<div class="">
+				<div class="col-xs-3 center-align">
   				<a ng-href="#/search" class="btn main-btn">Go back and edit dinner</a>
   			</div>
-		  	<div class="col-xs-8">
+		  	<div class="col-xs-6">
 		  		<div><h2>My dinner: {{getNumberOfGuests()}} people</h2></div>
 		  	</div>
-	  	</div>
+		  	<div class="col-xs-3 center-align">
+  				<a ng-href="#/ingredients" class="btn main-btn confirm-btn">See all ingredients</a>
+  			</div>
+			</div>
 		</div>
 	</div>
 </div>
-<div class="box top-padding">
-	<div class="row underline" ng-repeat="dish in getFullMenu()">
-		<div class="col-xs-3 center-align">
-			<h2>{{dish.Title}}</h2>
-			<a ng-href="#/dish/{{dish.RecipeID}}">
-		  	<img class="dish-box" ng-src="{{dish.ImageURL}}"/>
-		  </a>
+<div ng-repeat="dish in getFullMenu()">
+	<div class="box padded">
+		<h2 class="center-align">{{dish.Title}}</h2>
+		<div class="row underline">
+			<div class="col-xs-3 row">
+				<h3>Description</h3>
+				<br/>
+				<a ng-href="#/dish/{{dish.RecipeID}}">
+					<img class="dish-box padded" ng-src="{{dish.ImageURL}}"/>
+				</a>
+				<br/>
+				<br/>
+				<p>{{dish.Description}}</p>
+			</div>					
+			<div class="col-xs-4">
+				<h3>Ingredients</h3>
+				<br/>
+				<div class="row" ng-repeat="ingredient in dish.Ingredients">
+					<div class="col-xs-2">{{getIngredientQuantity(ingredient.Quantity)}}</div>
+					<div class="col-xs-4">{{ingredient.Unit}}</div>
+					<div class="col-xs-6">{{ingredient.Name}}</div>
+				</div>
+			</div>
+			<div class="col-xs-5">
+				<h3>Preparation</h3>
+				<br/>
+				<p>{{dish.Instructions}}</p>
+			</div>
 		</div>
-    <div class="col-xs-3">
-      <h3>Description</h3>
-      <br/>
-      <p>{{dish.Description}}</p>
-    </div>
-    <div class="col-xs-5">
-        <h3>Preparation</h3>
-        <br/>
-        <p>{{dish.Instructions}}</p>
-    </div>
-  </div>
+	</div>
+	</br>
 </div>
